--- a/html.html
+++ b/html.html
@@ -27,11 +27,11 @@
                 <h3>Im a web developer.</h3>
                 <a href="#" class="cv">DOWNLOAD MY CV</a>
                 <br>
-                <a href="https://www.instagram.com/ussef_nejjam/"><img src="C:\Users\ELECTRO-RIMO\Desktop\portfulio\ig.png"  class="insta-logo"></a>
-                <a href="https://www.facebook.com/youssef.nejjam.16"><img src="C:\Users\ELECTRO-RIMO\Desktop\portfulio\fb.png"  class="fb-logo"></a>
-                <a href="#"><img src="C:\Users\ELECTRO-RIMO\Desktop\portfulio\in.png"  class="in-logo"></a>
+                <a href="https://www.instagram.com/ussef_nejjam/"><img src="ig.png"  class="insta-logo"></a>
+                <a href="https://www.facebook.com/youssef.nejjam.16"><img src="fb.png"  class="fb-logo"></a>
+                <a href="#"><img src="in.png"  class="in-logo"></a>
             </div>
-            <div class="img"><img src="C:\Users\ELECTRO-RIMO\Desktop\portfulio\pp.jpg">
+            <div class="img"><img src="pp.jpg">
             </div>
         </div>
     </div>
